# A-level-coursework

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
generate_session_key/: Cargo.toml
generate_session_key/src/: main.rs
migrations/2022-09-21-102031_create_users/: up.sql
migrations/2022-10-20-182501_create_events/: down.sql  up.sql
migrations/2022-10-20-182501_events/: down.sql
migrations/2022-10-20-184706_create_events_participants/: down.sql  up.sql
migrations/2022-10-20-184706_events_participants/: down.sql  up.sql
migrations/2022-12-18-191545_friendships/: down.sql  up.sql
migrations/2022-12-19-132548_groups/: up.sql
migrations/2022-12-19-132810_groups_participants/: down.sql  up.sql
migrations/2022-12-19-132820_events/: down.sql  up.sql
public/css/: global.css
public/img/: logo.xcf
public/js/: helpers.js  zxcvbn.js
public/jsx/: login.jsx
public/jsx/components/: App.jsx  ErrorMessage.jsx  Header.jsx  PageContainerBox.jsx  PageContainerBoxLarge.jsx  PasswordStrength.jsx  Timetable.jsx  TimetableEvent.jsx
public/jsx/pages/: Calendar.jsx  CreateEvent.jsx  Friends.jsx  Login.jsx  Signup.jsx
server/: Cargo.toml
server/src/: db.rs  main.rs  page_template.rs  schema.rs  settings.rs
server/src/data/: events.rs  friends.rs  group.rs  mod.rs  models.rs  notifications.rs  session.rs  users.rs
server/src/endpoints/: events.rs  friends.rs  groups.rs  mod.rs  notifications.rs  users.rs
server/templates/: _app.html
