[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
password-hash = "0.4"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
actix-cors = "0.6.3"
askama = { version = "0.11.1", features = ["with-actix-web"] }
actix-files = "0.6.2"
askama_actix = "0.13.0"
env_logger = "0.9.1"
log = "0.4.17"
derive_more = "0.99.17"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
